# movers

./: Cargo.toml  Dockerfile  LICENSE  README.md  notes.md  test.html  test.json  test.rs
movers/: Cargo.toml
movers/src/: cflixscraping.rs  helpers.rs  main.rs  packet_downloader.rs  subtitles.rs
